--- a/pymi2006-minhnq-ex11.ipynb
+++ b/pymi2006-minhnq-ex11.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,11 +609,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>1392343181</th>\n",
+       "      <th>16102220.610000000000</th>\n",
+       "      <th>0.701800000000</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1395747805</td>\n",
+       "      <td>13454060.69</td>\n",
+       "      <td>0.185817</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1396018379</td>\n",
+       "      <td>11833327.73</td>\n",
+       "      <td>0.198423</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1396256087</td>\n",
+       "      <td>11549259.33</td>\n",
+       "      <td>0.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1400256247</td>\n",
+       "      <td>11368863.04</td>\n",
+       "      <td>0.215700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1401678584</td>\n",
+       "      <td>15987724.20</td>\n",
+       "      <td>0.155600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>813</th>\n",
+       "      <td>1495899444</td>\n",
+       "      <td>48690288.49</td>\n",
+       "      <td>0.102445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>814</th>\n",
+       "      <td>1495937671</td>\n",
+       "      <td>58115284.86</td>\n",
+       "      <td>0.584125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>815</th>\n",
+       "      <td>1495938069</td>\n",
+       "      <td>57905767.28</td>\n",
+       "      <td>0.518083</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>816</th>\n",
+       "      <td>1495942243</td>\n",
+       "      <td>52866055.90</td>\n",
+       "      <td>0.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>817</th>\n",
+       "      <td>1496120420</td>\n",
+       "      <td>61603325.10</td>\n",
+       "      <td>0.016233</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>818 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     1392343181  16102220.610000000000  0.701800000000\n",
+       "0    1395747805            13454060.69        0.185817\n",
+       "1    1396018379            11833327.73        0.198423\n",
+       "2    1396256087            11549259.33        0.200000\n",
+       "3    1400256247            11368863.04        0.215700\n",
+       "4    1401678584            15987724.20        0.155600\n",
+       "..          ...                    ...             ...\n",
+       "813  1495899444            48690288.49        0.102445\n",
+       "814  1495937671            58115284.86        0.584125\n",
+       "815  1495938069            57905767.28        0.518083\n",
+       "816  1495942243            52866055.90        0.100000\n",
+       "817  1496120420            61603325.10        0.016233\n",
+       "\n",
+       "[818 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df6 = pd.read_csv('/home/minhnq/pyfml/exercises/localbtcVND.csv')"
+    "df6 = pd.read_csv('/home/minhnq/pyfml/exercises/localbtcVND.csv')\n",
+    "df6"
    ]
   },
   {
